renommer les dossiers

--- a/_base/_mixin.scss
+++ b/_base/_mixin.scss
@@ -1,7 +1,7 @@
 /* mixin ---------------  */
 
 //flex
-@mixin setFlex($direction, $justify, $align){
+@mixin flex($direction, $justify, $align){
     display: flex;
     flex-direction: $direction;
     justify-content: $justify;
