--- a/_interface/_grilleDesktop.scss
+++ b/_interface/_grilleDesktop.scss
@@ -1,1 +1,3 @@
-/* grilleDesktop  */
+/*-------------------------1------------------------------------------------------ 
+-----------------------grilleDesktop----------------------------------------------
+----------------------------------------------------------------------------------  */
