--- a/_interface/_grilleMobile.scss
+++ b/_interface/_grilleMobile.scss
@@ -1,1 +1,3 @@
-/* grilleMoblie */
+/*-------------------------2------------------------------------------------------ 
+-----------------------grilleMobile----------------------------------------------
+----------------------------------------------------------------------------------  */
