--- a/_interface/_sousGrilleContenu.scss
+++ b/_interface/_sousGrilleContenu.scss
@@ -1,1 +1,3 @@
-/* sousGrilleContenu  */
+/*-------------------------3------------------------------------------------------ 
+-----------------------sousGrilleContenu----------------------------------------------
+----------------------------------------------------------------------------------  */
