--- a/_layout/_navPrincipale.scss
+++ b/_layout/_navPrincipale.scss
@@ -1,4 +1,6 @@
-/* navPrincipale */
+/*-------------------------9------------------------------------------------------ 
+-----------------------NavPrincipale----------------------------------------------
+----------------------------------------------------------------------------------  */
 
 nav.menu{
     background-color: var(--noir);
