--- a/_modules/_gallerieImages.scss
+++ b/_modules/_gallerieImages.scss
@@ -1,1 +1,3 @@
-/* gallerieImage */
+/*-------------------------11------------------------------------------------------ 
+-----------------------gallerieImage----------------------------------------------
+----------------------------------------------------------------------------------  */
