--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*sdfsfdsdfdsfs*/
 /* variables  */
 :root {
@@ -44,19 +45,57 @@ img {
   display: block;
 }
 
-/* grilleDesktop  */
-/* grilleMoblie */
-/* sousGrilleContenu  */
-/* navPrincipale */
+/*-------------------------1------------------------------------------------------ 
+-----------------------grilleDesktop----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------2------------------------------------------------------ 
+-----------------------grilleMobile----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------3------------------------------------------------------ 
+-----------------------sousGrilleContenu----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------9------------------------------------------------------ 
+-----------------------NavPrincipale----------------------------------------------
+----------------------------------------------------------------------------------  */
 nav.menu {
   background-color: var(--noir);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-/* navFooter */
-/* navLangue */
-/* footer  */
-/* listeProduit */
-/* pub  */
-/* gallerieImage */
-/* login  */
+/*-------------------------7------------------------------------------------------ 
+-----------------------NavFooter----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------8------------------------------------------------------ 
+-----------------------NavLangue----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------6------------------------------------------------------ 
+-----------------------header----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------5------------------------------------------------------ 
+-----------------------Footer----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------4------------------------------------------------------ 
+-----------------------ListeProduit----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------10------------------------------------------------------ 
+-----------------------Publicité----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------11------------------------------------------------------ 
+-----------------------gallerieImage----------------------------------------------
+----------------------------------------------------------------------------------  */
+/*-------------------------12------------------------------------------------------ 
+-----------------------Login----------------------------------------------
+----------------------------------------------------------------------------------  */
 /*# sourceMappingURL=style.css.map */
