--- a/_layout/_article.scss
+++ b/_layout/_article.scss
@@ -1,1 +1,3 @@
-/* listeProduit */
+/*-------------------------4------------------------------------------------------ 
+-----------------------ListeProduit----------------------------------------------
+----------------------------------------------------------------------------------  */
