--- a/_layout/_footer.scss
+++ b/_layout/_footer.scss
@@ -1,1 +1,3 @@
-/* footer  */
+/*-------------------------5------------------------------------------------------ 
+-----------------------Footer----------------------------------------------
+----------------------------------------------------------------------------------  */
