--- a/_layout/_navFooter.scss
+++ b/_layout/_navFooter.scss
@@ -1,1 +1,3 @@
-/* navFooter */
+/*-------------------------7------------------------------------------------------ 
+-----------------------NavFooter----------------------------------------------
+----------------------------------------------------------------------------------  */
