--- a/_layout/_pub.scss
+++ b/_layout/_pub.scss
@@ -1,1 +1,3 @@
-/* pub  */
+/*-------------------------10------------------------------------------------------ 
+-----------------------Publicité----------------------------------------------
+----------------------------------------------------------------------------------  */
