--- a/style.css
+++ b/style.css
@@ -83,6 +83,16 @@ nav.menu {
 /*-------------------------6------------------------------------------------------ 
 -----------------------header----------------------------------------------
 ----------------------------------------------------------------------------------  */
+header {
+  display: block;
+  background-image: url(../foodiesImg/header-assets/photo-480.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 37vh;
+}
+
 /*-------------------------5------------------------------------------------------ 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
