--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -1,3 +1,13 @@
 /*-------------------------6------------------------------------------------------ 
 -----------------------header----------------------------------------------
 ----------------------------------------------------------------------------------  */
+
+header{
+    display: block;
+    background-image: url(../foodiesImg/header-assets/photo-480.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:contain;
+    width: 100%;
+    height: 37vh;
+}
