--- a/_interface/_grilleMobile.scss
+++ b/_interface/_grilleMobile.scss
@@ -1,3 +1,7 @@
 /*-------------------------2------------------------------------------------------ 
 -----------------------grilleMobile----------------------------------------------
 ----------------------------------------------------------------------------------  */
+
+aside{
+    display: none;
+}
