--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 /*sdfsfdsdfdsfs*/
 /* variables  */
 :root {
-  --vert:hsl(66, 40%, 50%);
-  --orange:hsl(14, 80%, 50%);
-  --blanc:hsl(0, 0, 100%);
-  --noir:hsl(0, 0, 0);
+  --vert: hsl(66, 40%, 50%);
+  --orange: hsl(14, 80%, 50%);
+  --blanc: hsl(0, 0, 100%);
+  --noir: hsl(0, 0, 0);
 }
 
 /* mixin ---------------  */
@@ -51,6 +51,10 @@ img {
 /*-------------------------2------------------------------------------------------ 
 -----------------------grilleMobile----------------------------------------------
 ----------------------------------------------------------------------------------  */
+aside {
+  display: none;
+}
+
 /*-------------------------3------------------------------------------------------ 
 -----------------------sousGrilleContenu----------------------------------------------
 ----------------------------------------------------------------------------------  */
@@ -71,10 +75,10 @@ nav.menu > .material-icons {
   font-size: 4em;
 }
 
-/*-------------------------7------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------NavFooter----------------------------------------------
 ----------------------------------------------------------------------------------  */
-/*-------------------------8------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------NavLangue----------------------------------------------
 ----------------------------------------------------------------------------------  */
 /*-------------------------6------------------------------------------------------ 
@@ -93,9 +97,32 @@ header {
 /*-------------------------5------------------------------------------------------ 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
-/*-------------------------4------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------ListeProduit----------------------------------------------
 ----------------------------------------------------------------------------------  */
+article > .entete {
+  background-color: yellowgreen;
+  color: white;
+  margin: 2em 0;
+  padding: 1em 0;
+  text-align: center;
+}
+
+article > section.titre {
+  padding: 0.5em 1.5em;
+}
+
+article section.titre > h2 {
+  font-size: 4em;
+  font-weight: 300;
+  line-height: 1em;
+}
+
+article > section.titre > p {
+  opacity: 0.5;
+  padding-top: 0,5em;
+}
+
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
