--- a/style.css
+++ b/style.css
@@ -126,6 +126,9 @@ article > section.titre > p {
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
+/*------------------------------------------------------------------------------- 
+-----------------------Aside----------------------------------------------
+----------------------------------------------------------------------------------  */
 /*-------------------------11------------------------------------------------------ 
 -----------------------gallerieImage----------------------------------------------
 ----------------------------------------------------------------------------------  */
