--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -1,4 +1,4 @@
-/*-------------------------6------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------header----------------------------------------------
 ----------------------------------------------------------------------------------  */
 
@@ -7,7 +7,7 @@ header{
     background-image: url(../foodiesImg/header-assets/photo-480.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:contain;
-    width: 100%;
+    background-size:cover;
+    width: 100vw;
     height: 37vh;
 }
