--- a/_layout/_article.scss
+++ b/_layout/_article.scss
@@ -2,13 +2,14 @@
 -----------------------ListeProduit----------------------------------------------
 ----------------------------------------------------------------------------------  */
 
-article{
+article.principal{
     & > .entete{
         background-color: yellowgreen;
         color: white;
         margin:2em 0 ;
         padding:1em 0 ;
         text-align: center;
+        font-weight: 100;
         
     }
     & > section.titre{
@@ -16,7 +17,7 @@ article{
         
     }
 
-        & section.titre > h2{
+        & > section.titre > h2{
         font-size: 4em;
         font-weight: 300;
         line-height: 1em;
@@ -24,6 +25,20 @@ article{
     & > section.titre > p{
         opacity: 0.5;
         padding-top:0,5em;
+    }
+    & > .manShapeMobile{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 5em 0;
+        width: 50vw;
+
+    }
+    & > p{
+         font-weight: 600;
+         margin:0 3em;
+         text-align: center;
+         line-height: 3em;
     }
 }
 
