--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ nav.menu > .material-icons {
 /*------------------------------------------------------------------------------- 
 -----------------------NavLangue----------------------------------------------
 ----------------------------------------------------------------------------------  */
-/*-------------------------6------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------header----------------------------------------------
 ----------------------------------------------------------------------------------  */
 header {
@@ -89,38 +89,54 @@ header {
   background-image: url(../foodiesImg/header-assets/photo-480.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
-  width: 100%;
+  background-size: cover;
+  width: 100vw;
   height: 37vh;
 }
 
-/*-------------------------5------------------------------------------------------ 
+/*------------------------------------------------------------------------------- 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
 /*------------------------------------------------------------------------------- 
 -----------------------ListeProduit----------------------------------------------
 ----------------------------------------------------------------------------------  */
-article > .entete {
+article.principal > .entete {
   background-color: yellowgreen;
   color: white;
   margin: 2em 0;
   padding: 1em 0;
   text-align: center;
+  font-weight: 100;
 }
 
-article > section.titre {
+article.principal > section.titre {
   padding: 0.5em 1.5em;
 }
 
-article section.titre > h2 {
+article.principal > section.titre > h2 {
   font-size: 4em;
   font-weight: 300;
   line-height: 1em;
 }
 
-article > section.titre > p {
+article.principal > section.titre > p {
   opacity: 0.5;
   padding-top: 0,5em;
+}
+
+article.principal > .manShapeMobile {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5em 0;
+  width: 50vw;
+}
+
+article.principal > p {
+  font-weight: 600;
+  margin: 0 3em;
+  text-align: center;
+  line-height: 3em;
 }
 
 /*-------------------------10------------------------------------------------------ 
