--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -3,11 +3,17 @@
 ----------------------------------------------------------------------------------  */
 
 header{
-    display: block;
     background-image: url(../foodiesImg/header-assets/photo-480.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:contain;
     width: 100vw;
-    height: 37vh;
+    height: 20vh;
+      
+    & img{
+        width: 60vw;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
