--- a/style.css
+++ b/style.css
@@ -231,6 +231,38 @@ article.principal > p {
   font-size: 0.7rem;
 }
 
+article.recette {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+article.recette a p {
+  background-color: green;
+  color: white;
+  text-align: center;
+  padding: 2rem;
+  margin: 0 17rem 5rem;
+  border-radius: 7px;
+}
+
+article.recette p {
+  font-size: 1.1rem;
+  margin: 1rem 3rem;
+  text-align: justify;
+  padding-bottom: 3rem;
+}
+
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
