--- a/style.css
+++ b/style.css
@@ -121,6 +121,13 @@ header img {
 /*------------------------------------------------------------------------------- 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
+footer {
+  background-color: black;
+  color: white;
+  padding: 5rem;
+  text-align: center;
+}
+
 /*------------------------------------------------------------------------------- 
 -----------------------ListeProduit----------------------------------------------
 ----------------------------------------------------------------------------------  */
