--- a/_layout/_footer.scss
+++ b/_layout/_footer.scss
@@ -1,3 +1,10 @@
 /*------------------------------------------------------------------------------- 
 -----------------------Footer----------------------------------------------
 ----------------------------------------------------------------------------------  */
+
+footer{
+    background-color: black;
+    color:white;
+    padding:5rem;
+    text-align: center;
+}
