--- a/_layout/_pub.scss
+++ b/_layout/_pub.scss
@@ -1,3 +1,19 @@
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
+
+section.article{
+
+    & div img.pub {
+        width: 40vw;
+        display: block;
+        margin: 6em auto 6em auto;
+        
+    }
+
+    & div img.pub3{
+        width: 40vw;
+        position: absolute;
+        top:268em
+    }
+}
