--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -3,17 +3,24 @@
 ----------------------------------------------------------------------------------  */
 
 header{
+    @include flex(column, center, center);
     background-image: url(../foodiesImg/header-assets/photo-480.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:auto;
     width: 100vw;
-    height: 20vh;
-      
+    
+
     & img{
         width: 60vw;
         display: block;
-        margin-left: auto;
-        margin-right: auto;
+        margin:auto;
+        
+    }
+}
+
+@media only screen and (min-width: 740px) {
+    header{
+        
     }
 }
