--- a/style.css
+++ b/style.css
@@ -79,34 +79,41 @@ section.article {
 /*------------------------------------------------------------------------------- 
 -----------------------NavPrincipale----------------------------------------------
 ----------------------------------------------------------------------------------  */
-nav.menu {
-  background-color: black;
-  height: 7vh;
-}
-
 nav.menu li {
   display: none;
 }
 
-nav.menu > .material-icons {
+nav.menu i {
   color: white;
-  font-size: 6em;
+  font-size: 6rem;
+  float: right;
+  padding: 0.8rem 2rem 0 0;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
-/*------------------------------------------------------------------------------- 
------------------------NavFooter----------------------------------------------
-----------------------------------------------------------------------------------  */
-/*------------------------------------------------------------------------------- 
------------------------NavLangue----------------------------------------------
-----------------------------------------------------------------------------------  */
 /*------------------------------------------------------------------------------- 
 -----------------------header----------------------------------------------
 ----------------------------------------------------------------------------------  */
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background-image: url(../foodiesImg/header-assets/photo-480.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   width: 100vw;
   height: 20vh;
 }
@@ -114,8 +121,7 @@ header {
 header img {
   width: 60vw;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 }
 
 /*------------------------------------------------------------------------------- 
@@ -131,15 +137,9 @@ footer {
 /*------------------------------------------------------------------------------- 
 -----------------------ListeProduit----------------------------------------------
 ----------------------------------------------------------------------------------  */
-section.article .pub {
-  width: 40vw;
-  display: block;
-  margin: 6em auto 6em auto;
-}
-
 section.article h3 {
-  margin: 1rem 3rem;
-  font-size: 4rem;
+  margin: 0rem 3rem;
+  font-size: 3rem;
   color: var(--orange);
   padding-bottom: 0.5em;
   text-align: center;
@@ -165,8 +165,8 @@ section.article img.recette {
 article.principal > .entete {
   background-color: yellowgreen;
   color: white;
-  margin: 2em 0;
-  padding: 1em 0;
+  margin: 3rem 0 2rem;
+  padding: 1rem 0;
   text-align: center;
   font-weight: 100;
 }
@@ -220,7 +220,7 @@ article.principal > p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 1rem 3rem;
+  margin: 1rem 3rem 35rem;
 }
 
 .bonheur figure {
@@ -265,14 +265,30 @@ article.recette a p {
 
 article.recette p {
   font-size: 1.1rem;
-  margin: 1rem 3rem;
+  margin: -3rem 3rem 1rem 3rem;
   text-align: justify;
   padding-bottom: 3rem;
+}
+
+article.recette > p {
+  margin: 0 3rem;
 }
 
 /*-------------------------10------------------------------------------------------ 
 -----------------------Publicité----------------------------------------------
 ----------------------------------------------------------------------------------  */
+section.article .pub {
+  width: 40vw;
+  display: block;
+  margin: 6em auto 6em auto;
+}
+
+section.article .pub3 {
+  width: 40vw;
+  position: absolute;
+  top: 268em;
+}
+
 /*------------------------------------------------------------------------------- 
 -----------------------Aside----------------------------------------------
 ----------------------------------------------------------------------------------  */
