--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -7,7 +7,7 @@ header{
     background-image: url(../foodiesImg/header-assets/photo-480.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:auto;
+    background-size:cover;
     width: 100vw;
     
 
@@ -21,6 +21,6 @@ header{
 
 @media only screen and (min-width: 740px) {
     header{
-        
+        background-image: url(../foodiesImg/header-assets/photo-740.jpg);
     }
 }
