--- a/_layout/_navPrincipale.scss
+++ b/_layout/_navPrincipale.scss
@@ -2,37 +2,45 @@
 -----------------------NavPrincipale----------------------------------------------
 ----------------------------------------------------------------------------------  */
 
-nav.menu{
+nav{
+   
+   @include flex(column,flex-start, flex-start);
+   width:70%;
+   height: 100vh;
+   z-index: 1500;
+   background-color:black;
+   color:var(--blanc);
 
         & ul{
-            background-color: red;
-            width: 100vw;
-            height: 100vh;
-            
+        @include flex(column,flex-start, flex-start);
+         width: 100%;
+         height: 60%;
+         
         }
 
         & li{
-            
+            @include flex(row,center,center);
+            padding: 1.6em;
             color: white;
+            
+            border-bottom: 1px solid white;
+
             
             & img{
                 width: 4rem;
                 color: white;
-                
             }
         }
-        
-
-        & i{
-        color: white;//pas oublier************************
-        font-size: 6rem;
-        float: right;
-        padding: 0.8rem 2rem 0 0;
-        position: absolute;
-        
-        
-    }   
-
-}
-
+    }
+    i{
+    color: black;//pas oublier************************
+    font-size: 6rem;
+    float: right;
+    padding: 0.8rem 2rem 0 0;
+    position: fixed;
+    right: 1rem;
+    top: 1rem;
+    z-index: 1600;
+}   
+    
 //float déplace tout
