--- a/style.css
+++ b/style.css
@@ -79,33 +79,7 @@ section.article {
 /*------------------------------------------------------------------------------- 
 -----------------------NavPrincipale----------------------------------------------
 ----------------------------------------------------------------------------------  */
-nav.menu ul {
-  background-color: red;
-  width: 100vw;
-  height: 100vh;
-}
-
-nav.menu li {
-  color: white;
-}
-
-nav.menu li img {
-  width: 4rem;
-  color: white;
-}
-
-nav.menu i {
-  color: white;
-  font-size: 6rem;
-  float: right;
-  padding: 0.8rem 2rem 0 0;
-  position: absolute;
-}
-
-/*------------------------------------------------------------------------------- 
------------------------header----------------------------------------------
-----------------------------------------------------------------------------------  */
-header {
+nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -113,16 +87,80 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 70%;
+  height: 100vh;
+  z-index: 1500;
+  background-color: black;
+  color: var(--blanc);
+}
+
+nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+  height: 60%;
+}
+
+nav li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 1.6em;
+  color: white;
+  border-bottom: 1px solid white;
+}
+
+nav li img {
+  width: 4rem;
+  color: white;
+}
+
+i {
+  color: black;
+  font-size: 6rem;
+  float: right;
+  padding: 0.8rem 2rem 0 0;
+  position: fixed;
+  right: 1rem;
+  top: 1rem;
+  z-index: 1600;
+}
+
+/*------------------------------------------------------------------------------- 
+-----------------------header----------------------------------------------
+----------------------------------------------------------------------------------  */
+header {
   background-image: url(../foodiesImg/header-assets/photo-480.jpg);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 100vw;
 }
 
@@ -130,12 +168,6 @@ header img {
   width: 60vw;
   display: block;
   margin: auto;
-}
-
-@media only screen and (min-width: 740px) {
-  header {
-    background-image: url(../foodiesImg/header-assets/photo-740.jpg);
-  }
 }
 
 /*------------------------------------------------------------------------------- 
