--- a/_layout/_header.scss
+++ b/_layout/_header.scss
@@ -7,8 +7,10 @@ header{
     background-image: url(../foodiesImg/header-assets/photo-480.jpg);
     background-position: center;
     background-repeat: no-repeat;
-    background-size:contain;
+    background-size:cover;
     width: 100vw;
+    height: 15vh;
+    
     
 
     & img{
