--- a/_layout/_navPrincipale.scss
+++ b/_layout/_navPrincipale.scss
@@ -10,22 +10,19 @@ nav{
    z-index: 1500;
    background-color:black;
    color:var(--blanc);
-
+   position:fixed;
+   
+   
         & ul{
         @include flex(column,flex-start, flex-start);
          width: 100%;
          height: 60%;
-         
         }
-
         & li{
             @include flex(row,center,center);
             padding: 1.6em;
             color: white;
-            
             border-bottom: 1px solid white;
-
-            
             & img{
                 width: 4rem;
                 color: white;
@@ -42,5 +39,17 @@ nav{
     top: 1rem;
     z-index: 1600;
 }   
+
+
+
+/*////[Navigation principale programmation]
+________________________________________________________*/
+.nav-principale-close{
+    left:-1000px;
+}
+.nav-principale-open{
+    left:0px;
+}
+
     
 //float déplace tout
