--- a/_layout/_footer.scss
+++ b/_layout/_footer.scss
@@ -3,8 +3,8 @@
 ----------------------------------------------------------------------------------  */
 
 footer{
-    background-color: black;
-    color:white;
+    background-color:var(--noir);
+    color:var(--blanc);
     padding:5rem;
     text-align: center;
 }
