--- a/_base/_variables.scss
+++ b/_base/_variables.scss
@@ -2,7 +2,7 @@
 :root{
     --vert: hsl(66, 40%, 50%);
     --orange: hsl(14, 80%, 50%);
-    --blanc: hsl(0, 0, 100%);
-    --noir: hsl(0, 0, 0);
+    --blanc: hsl(0, 0%, 100%);
+    --noir: hsl(0, 0%, 0%);
 
 }
