--- a/_layout/_pub.scss
+++ b/_layout/_pub.scss
@@ -4,7 +4,7 @@
 
 section.article{
 
-    & div img.pub {
+    & img.pub {
         width: 40vw;
         display: block;
         margin: 6em auto 6em auto;
