--- a/styleCSS/_layout/_pub.scss
+++ b/styleCSS/_layout/_pub.scss
@@ -14,6 +14,6 @@ section.article{
     & div img.pub3{
         width: 40vw;
         position: absolute;
-        top:268em
+        top:287.5em;
     }
 }
